# Polynomials

./: CMakeLists.txt  CMakeUserPresets.json
Polynomials/: CMakeLists.txt  main.cpp
Polynomials/backend/includes/: fraction.h  my_base.h  polynomial.h  polynomial_node.h
Polynomials/backend/source/: fraction.cpp  polynomial.cpp  polynomial_node.cpp
Polynomials/frontend/: badaba.txt
Polynomials/frontend/includes/: main_window.h  qt_headers.h
Polynomials/frontend/source/: base_operations.cpp  base_table.cpp  main_window.cpp  other_operations.cpp  polynomial_operations.cpp  push_to_base.cpp  two_polynomials_operations.cpp
